--- a/Account.API/appsettings.json
+++ b/Account.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "GabDatabaseSettings": {
+      "GabCollectionName": "Accounts",
+    "ConnectionString": "mongodb://gabmongodb:27017",
+    "DatabaseName": "gabmusic"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
