--- a/Friends.API/appsettings.json
+++ b/Friends.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "GabDatabaseSettings": {
+    "GabCollectionName": "Friends",
+    "ConnectionString": "mongodb://gabmongodb:27017",
+    "DatabaseName": "gabmusic"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
