--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,3 +77,10 @@ services:
     restart: always
     ports:
       - "27017:27017"
+
+  angular:
+    container_name: angular
+    image: angular
+    build: ./MusicUI
+    ports:
+      - "3000:80"
